# ambilight

./: .gitignore  README.md
ambilight_desktop/: .metadata  README.md  README_RUN.md  analysis_options.yaml  pubspec.yaml  pubspec.yaml.tmp
context/: AGENT_PARALLEL_9.md  AGENT_PROMPTS_AMBILIGHT_FLUTTER.md  AmbiLight-MASTER-PLAN.md  AmbiLight-analyza-a-Flutter-plan.md  DESKTOP_TARGETS.md  E7_PROCESS_CAPTURE_API.md  ENGINE_PROFILE_NOTES.md  ESP_UDP_TRANSPORT_NOTES.md  FIRMWARE_TEMPORAL_UDP_F1.md  FLUTTER_PERFORMANCE_PROFILE.md  FLUTTER_VS_PYQT_GAP_ANALYSIS.md  FW_APP_PROTOCOL_COMPAT.md  HA_AMBILIGHT_COEXIST.md  HUE_HOME_ASSISTANT_AMBIENT_PLAN.md  LIFECYCLE_SUBSCRIPTIONS.md  MEMORY_PROFILING_TEMPLATE.md  MUSIC_PORT_STATUS.md  MUSIC_SPECTRUM_EXTENSIONS.md  MUSIC_SPOTIFY_USER_GUIDE.md  PAGES_VIDEO_PROMPTS.md  PERF_LED_AGENT_HANDOFF.md  PIPELINE_CONTRACT.md  PIPELINE_NATIVE_ROI.md  PIPELINE_UDP_STRATEGY.md  PLATFORM_RESUME_MATRIX.md  PROJECT_STATE_AUDIT.md  PYQT_VS_FLUTTER_COMPLETE_INVENTORY.md  README_PERMISSIONS.md  RELEASE_GATE_CHECKLIST.md  REPRO_MATRIX_FLUTTER_ESP.md  SCREEN_CAPTURE_CHANNEL.md  SCREEN_CAPTURE_SUPPORT_MATRIX.md  SCREEN_COLOR_PIPELINE.md  SETTINGS_PAGE_WIDGET_TREE.md  SHIP_READY_CRASH_RESILIENCE_PLAN.md  SMART_LIGHTS_EFFECTS.md  TELEMETRY_POLICY.md  (+6 more)
led_strip_monitor_pokus - Copy/esp_mqtt_light/esp-homekit_respb_try_V1/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  config.h  idf_component.yml  led_controller.c  led_controller.h  led_strip_driver.c  led_strip_driver.h  mqtt_handler.c  mqtt_handler.h  provisioning_manager.c  provisioning_manager.h
(+408 files in other folders)
